unpackaged/main/default/objects/Contact/fields/Due_s__c.field-meta.xml
<CustomField>
    <fullName>Due_s__c</fullName>
    <description>This is used to store Library dues for a student</description>
    <label>Due(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>