unpackaged/main/default/objects/Contact/fields/If_LMS_User__c.field-meta.xml
<CustomField>
    <fullName>If_LMS_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If LMS User?</label>
    <type>Checkbox</type>
</CustomField>