unpackaged/main/default/objects/Contact/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <description>used in LMS</description>
    <label>Member Id</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>