unpackaged/main/default/objects/Contact/recordTypes/LMS_Contact.recordType-meta.xml
<RecordType>
    <fullName>LMS_Contact</fullName>
    <active>true</active>
    <label>LMS Contact</label>
</RecordType>